# logicall-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  test-docker.ps1
.build/: lambda-deploy-policy.json
.github/workflows/: ci-backend.yaml  deploy-api.yml  deploy.yml
api/: run_local.py
api/common/: auth.py  livekit_client.py  secrets.py
api/outbound_trigger/: README.md  main.py  requirements.txt
api/scripts/: create_livekit_secret.py  destroy_room.py  trigger_request.json
gitops/apps/: kustomization.yaml
gitops/apps/backend/: deployment.yaml  external-secrets-sa.yaml  externalsecret.yaml  hpa.yaml  secret.yaml  service.yaml
gitops/apps/external-secrets/: externalsecret.yaml  (+2 more)
gitops/argocd/: root-app.yaml
infra/bootstrap/: check-resources.ps1  main.tf  outputs.tf  unlock-state.ps1  variables.tf
infra/eks/: backend.tf  external-secrets.tf  main.tf  outputs.tf  variables.tf
migrations/: 001_create_table.py  002_seed_defaults.py  003_seed_logistics_profiles.py  004_add_sip_trunk_to_profiles.py  README.md  list_profiles.py  run_migrations.py  table-definition.json  verify_setup.py
prompts/: prompt_carrier_onboarding.txt  prompt_check_up.txt  prompt_claims_intake.txt  prompt_delivery_reminder.txt  prompt_delivery_reschedule.txt  prompt_inbound_triage.txt  prompt_post_delivery.txt
src/: agent.py  config.py  egress.py  latency.py  metadata.py  metrics_server.py  profile_resolver.py  session_builder.py  session_hooks.py  tools.py
src/tools/: __init__.py  http_dynamic.py  registry.py  telephony.py
(+4 files in other folders)
